--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Hey! How are you doing?</h1>
     <h2>I am using github for the first time</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem dolores illum quia iste tenetur. Eveniet libero, eius vero dolor, adipisci soluta officia laudantium ducimus quam assumenda odio perferendis dignissimos deleniti.</p>
+
+    <h1> This is heading one</h1>
 </body>
 </html>
