--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem dolores illum quia iste tenetur. Eveniet libero, eius vero dolor, adipisci soluta officia laudantium ducimus quam assumenda odio perferendis dignissimos deleniti.</p>
 
     <h1> This is heading one</h1>
+    <img src="https://bangladeshpost.net/webroot/uploads/featureimage/2019-12/5dfa4b4f98a44.jpg" alt="Padma Bridge">
 </body>
 </html>
