learnig about creat branch

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 
     <h1> This is heading one</h1>
     <img src="https://bangladeshpost.net/webroot/uploads/featureimage/2019-12/5dfa4b4f98a44.jpg" alt="Padma Bridge">
+
+    <h1>I have created a new brach named second-branch</h1>
 </body>
 </html>
