--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1> This is heading one</h1>
     <img src="https://bangladeshpost.net/webroot/uploads/featureimage/2019-12/5dfa4b4f98a44.jpg" alt="Padma Bridge">
 
-    <h1>I have created a new brach named second-branch</h1>
+    <h1>I have created a new branch named second-branch</h1>
+    <p>I am from 2021 and wishing to this year will be a covid 19 free year.</p>
 </body>
 </html>
